--- a/genindex.html
+++ b/genindex.html
@@ -171,6 +171,16 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.delete_quiz">delete_quiz() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
+
+      <ul>
+        <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager.delete_quiz">(pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
+</li>
+        <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.delete_quiz">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.delete_session_state">delete_session_state() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
@@ -458,6 +468,14 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.update_quiz">update_quiz() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
+
+      <ul>
+        <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager.update_quiz">(pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
+</li>
+        <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.update_quiz">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
+</li>
+      </ul></li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.update_session_state">update_session_state() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
