--- a/_modules/pyquizhub/core/storage/storage_manager.html
+++ b/_modules/pyquizhub/core/storage/storage_manager.html
@@ -95,7 +95,7 @@
 <a class="viewcode-back" href="../../../../core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.get_users">[docs]</a>
     <span class="nd">@abstractmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">get_users</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Fetch all users.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Fetch all users with statistics (permissions and quizzes_taken).&quot;&quot;&quot;</span>
         <span class="k">pass</span></div>
 
 
